--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "build": "react-scripts build",
-    "test": "jest",
+    "test": "jest --config ./jest.config.js",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
